linera-views-derive/src/snapshots/linera_views_derive__tests__generate_sharable_view_code-2.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_sharable_view_code(input))
---
impl linera_views::views::SharableView<CustomContext> for TestView {
    fn share_unchecked(&mut self) -> Result<Self, linera_views::views::ViewError> {
        Ok(Self {
            register: self.register.share_unchecked()?,
            collection: self.collection.share_unchecked()?,
        })
    }
}

