linera-views-derive/src/snapshots/linera_views_derive__tests__generate_view_code-3.snap
---
source: linera-views-derive/src/lib.rs
expression: "pretty(generate_view_code(input, true))"
---
#[async_trait::async_trait]
impl linera_views::view::View<custom::path::to::ContextType> for TestView {
    fn context(&self) -> &custom::path::to::ContextType {
        use linera_views::view::View;
        self.register.context()
    }
    async fn load(
        context: custom::path::to::ContextType,
    ) -> Result<Self, linera_views::view::ViewError> {
        use linera_views::{futures::join, common::Context};
        linera_views::increment_counter(
            &linera_views::LOAD_VIEW_COUNTER,
            stringify!(TestView),
            &context.base_key(),
        );
        let index = 0;
        let base_key = context
            .derive_tag_key(linera_views::common::MIN_VIEW_TAG, &index)?;
        let register_fut = RegisterView::load(context.clone_with_base_key(base_key));
        let index = 1;
        let base_key = context
            .derive_tag_key(linera_views::common::MIN_VIEW_TAG, &index)?;
        let collection_fut = CollectionView::load(context.clone_with_base_key(base_key));
        let result = join!(register_fut, collection_fut);
        let register = result.0?;
        let collection = result.1?;
        Ok(Self { register, collection })
    }
    fn rollback(&mut self) {
        self.register.rollback();
        self.collection.rollback();
    }
    fn flush(
        &mut self,
        batch: &mut linera_views::batch::Batch,
    ) -> Result<(), linera_views::view::ViewError> {
        use linera_views::view::View;
        self.register.flush(batch)?;
        self.collection.flush(batch)?;
        Ok(())
    }
    fn delete(self, batch: &mut linera_views::batch::Batch) {
        use linera_views::view::View;
        self.register.delete(batch);
        self.collection.delete(batch);
    }
    fn clear(&mut self) {
        self.register.clear();
        self.collection.clear();
    }
}

